# okx-plugin-store

./: .gitignore  Cargo.toml  README-ZH.md  README.md  SECURITY.md  install-local.sh  registry.json
.claude-plugin/: marketplace.json
.github/prompts/: ai-review-system.md
.github/scripts/: ai-review.py  inject-preflight.py
.github/security-rules/: static-rules.md
.github/workflows/: cleanup-pr.yml  integration-test.yml  plugin-ai-review.yml  plugin-build.yml  plugin-lint.yml  plugin-publish.yml  release.yml  sync-upstream.yml  update-registry.yml
.okone-cicd/compile/: README.md  build-all.sh  build-go.sh  build-node.sh  build-python.sh  build-rust.sh  build-typescript.sh
cli/: Cargo.toml
official/core/: Cargo.toml
official/hyperliquid/: Cargo.toml
official/hyperliquid/skills/hyperliquid/: SKILL.md
official/hyperliquid/skills/hyperliquid/references/: command-reference.md
official/hyperliquid/src/: auth.rs  client.rs  main.rs
official/memepump-scanner/: Cargo.toml
official/memepump-scanner/skills/memepump-scanner/: SKILL.md
official/memepump-scanner/skills/memepump-scanner/references/: strategy-reference.md
official/memepump-scanner/src/: client.rs  main.rs  mod.rs
official/ranking-sniper/: Cargo.toml
official/ranking-sniper/skills/ranking-sniper/: SKILL.md
official/ranking-sniper/skills/ranking-sniper/references/: strategy-reference.md
official/ranking-sniper/src/: client.rs  main.rs
official/signal-tracker/: Cargo.toml
official/signal-tracker/skills/signal-tracker/: SKILL.md
official/signal-tracker/skills/signal-tracker/references/: strategy-reference.md
official/signal-tracker/src/: engine.rs  main.rs
scripts/: launcher.sh  update-checker.py
skills/aave-v2-plugin/: Cargo.toml  SKILL.md  SUMMARY.md  plugin.yaml
skills/aave-v3-plugin/: Cargo.toml  SKILL.md  SUMMARY.md  plugin.yaml
skills/aerodrome-amm-plugin/: Cargo.toml  SKILL.md  SUMMARY.md  plugin.yaml
skills/aerodrome-slipstream-plugin/: Cargo.toml  SKILL.md  SUMMARY.md  plugin.yaml
skills/birdeye-plugin/: CHANGELOG.md  LICENSE  README.md  SKILL.md  SUMMARY.md  plugin.yaml
skills/clanker-plugin/: Cargo.toml  SKILL.md  SUMMARY.md  plugin.yaml
skills/clawvard-agent-eval/: SKILL.md  plugin.yaml
skills/coinank-openapi/: LICENSE  README.md  README_EN.md  SKILL.md  SUMMARY.md  plugin.yaml
skills/compound-v2-plugin/: Cargo.toml  SKILL.md  SUMMARY.md  plugin.yaml
skills/compound-v2-plugin/.claude-plugin/: plugin.json
skills/compound-v2-plugin/src/: config.rs  main.rs  onchainos.rs  rpc.rs
skills/compound-v2-plugin/src/commands/: borrow.rs  claim_comp.rs  enter_markets.rs  exit_market.rs  markets.rs  mod.rs  positions.rs  quickstart.rs  repay.rs  supply.rs  withdraw.rs
skills/compound-v3-plugin/: Cargo.toml  SKILL.md  SUMMARY.md  plugin.yaml
skills/curve-plugin/: SKILL.md  SUMMARY.md  plugin.yaml
skills/dolomite-plugin/: Cargo.toml  SKILL.md  SUMMARY.md  plugin.yaml
skills/eigencloud-plugin/: Cargo.toml  SKILL.md  SUMMARY.md  plugin.yaml
skills/eigencloud-plugin/.claude-plugin/: plugin.json
skills/eigencloud-plugin/src/: abi.rs  chain.rs  main.rs  onchainos.rs  strategies.rs
skills/eigencloud-plugin/src/commands/: delegate.rs  mod.rs  positions.rs  stake.rs  strategies.rs  undelegate.rs
skills/etherfi-plugin/: Cargo.toml  SKILL.md  SUMMARY.md  plugin.yaml
skills/euler-v2-plugin/: Cargo.toml  SKILL.md  SUMMARY.md  plugin.yaml
skills/fluid-plugin/: Cargo.toml  SKILL.md  SUMMARY.md  plugin.yaml
skills/fluid-plugin/.claude-plugin/: plugin.json
skills/fluid-plugin/src/: abi.rs  chain.rs  contracts.rs  main.rs  nft.rs  onchainos.rs  token.rs  vault.rs
skills/fluid-plugin/src/commands/: borrow.rs  close.rs  mod.rs  positions.rs  repay.rs  supply.rs  vaults.rs  withdraw.rs
skills/fourmeme-plugin/: .gitignore  Cargo.toml  SKILL.md  SUMMARY.md  plugin.yaml
skills/fourmeme-plugin/.claude-plugin/: plugin.json
skills/fourmeme-plugin/src/: api.rs  auth.rs  calldata.rs  config.rs  main.rs  onchainos.rs  rpc.rs
skills/fourmeme-plugin/src/commands/: agent_balance.rs  agent_register.rs  buy.rs  config.rs  create_token.rs  events.rs  get_token.rs  list_tokens.rs  login.rs  mod.rs  positions.rs  quickstart.rs  quote_buy.rs  quote_sell.rs  sell.rs  send.rs  tax_info.rs
skills/gmx-v2-plugin/: Cargo.toml  SKILL.md  SUMMARY.md  plugin.yaml
skills/gmx-v2-plugin/.claude-plugin/: plugin.json
skills/gmx-v2-plugin/src/: abi.rs  api.rs  config.rs  main.rs  onchainos.rs  rpc.rs
skills/gmx-v2-plugin/src/commands/: cancel_order.rs  claim_funding_fees.rs  close_position.rs  deposit_liquidity.rs  get_orders.rs  get_positions.rs  get_prices.rs  list_markets.rs  mod.rs  open_position.rs  place_order.rs  quickstart.rs  withdraw_liquidity.rs
skills/hyperliquid-plugin/: Cargo.toml  SKILL.md  SUMMARY.md  plugin.yaml
skills/lido-plugin/: Cargo.toml  (+3 more)
skills/puffer-plugin/: .gitignore  Cargo.toml  SKILL.md  SUMMARY.md  plugin.yaml
skills/puffer-plugin/.claude-plugin/: plugin.json
skills/puffer-plugin/src/: api.rs  calldata.rs  config.rs  main.rs  onchainos.rs  rpc.rs
skills/puffer-plugin/src/commands/: claim_withdraw.rs  instant_withdraw.rs  mod.rs  positions.rs  quickstart.rs  rate.rs  request_withdraw.rs  stake.rs  withdraw_options.rs  withdraw_status.rs
skills/spark-savings-plugin/: Cargo.toml  SKILL.md  SUMMARY.md  plugin.yaml
skills/spark-savings-plugin/.claude-plugin/: plugin.json
skills/spark-savings-plugin/src/: config.rs  main.rs  onchainos.rs  rpc.rs
skills/spark-savings-plugin/src/commands/: apy.rs  balance.rs  deposit.rs  mod.rs  quickstart.rs  upgrade_dai.rs  withdraw.rs
skills/sushiswap-v3-plugin/: Cargo.toml  SKILL.md  SUMMARY.md  plugin.yaml
skills/sushiswap-v3-plugin/.claude-plugin/: plugin.json
skills/sushiswap-v3-plugin/src/: config.rs  main.rs  onchainos.rs  rpc.rs
skills/sushiswap-v3-plugin/src/commands/: burn_position.rs  collect_fees.rs  mint_position.rs  mod.rs  pools.rs  positions.rs  quote.rs  remove_liquidity.rs  swap.rs
src/: lib.rs  main.rs  stats.rs
stats/: package.json  vercel.json
tests/: registry_test.rs
(+592 files in other folders)
