[package]
name = "dapp-hyperliquid"
version = "1.0.0"
edition = "2021"
description = "Hyperliquid perpetual futures and spot trading CLI"

[[bin]]
name = "dapp-hyperliquid"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
alloy-signer-local = "1"
alloy-primitives = "1"
alloy = { version = "1", features = ["signers"] }
tiny-keccak = { version = "2", features = ["keccak"] }
rmp-serde = "1"
hex = "0.4"
dotenvy = "0.15"
