[package]
name = "signal-tracker"
version = "1.0.0"
edition = "2021"
description = "Smart money signal tracker for automated Solana token trading"

[[bin]]
name = "strategy-signal-tracker"
path = "src/main.rs"

[lib]
name = "signal_tracker"
path = "src/mod.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = "0.4.44"
dirs = "6.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
plugin-store-core = { path = "../core" }
libc = "0.2.183"
