[package]
name = "gmx-v2-plugin"
version = "0.2.7"
edition = "2021"

[[bin]]
name = "gmx-v2-plugin"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
alloy-sol-types = "0.8"
alloy-primitives = "0.8"
hex = "0.4"
