[package]
name = "puffer-plugin"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "puffer-plugin"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
hex = "0.4"

[dev-dependencies]
sha3 = "0.10"
