[package]
name = "sushiswap-v3-plugin"
version = "0.1.2"
edition = "2021"

[[bin]]
name = "sushiswap-v3-plugin"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
